src/test/ui/hygiene/rustc-macro-transparency.stderr
error[E0425]: cannot find value `Opaque` in this scope
  --> $DIR/rustc-macro-transparency.rs:26:5
   |
LL |     Opaque;
   |     ^^^^^^ not found in this scope

error[E0423]: expected value, found macro `semitransparent`
  --> $DIR/rustc-macro-transparency.rs:29:5
   |
LL |     struct SemiTransparent;
   |     ----------------------- similarly named unit struct `SemiTransparent` defined here
...
LL |     semitransparent;
   |     ^^^^^^^^^^^^^^^ not a value
   |
help: use `!` to invoke the macro
   |
LL |     semitransparent!;
   |                    +
help: did you mean `SemiTransparent`? (a similarly named unit struct)
   |
LL |     SemiTransparent;
   |     ~~~~~~~~~~~~~~~

error[E0423]: expected value, found macro `opaque`
  --> $DIR/rustc-macro-transparency.rs:30:5
   |
LL |     struct Opaque;
   |     -------------- similarly named unit struct `Opaque` defined here
...
LL |     opaque;
   |     ^^^^^^ not a value
   |
help: use `!` to invoke the macro
   |
LL |     opaque!;
   |           +
help: did you mean `Opaque`? (a similarly named unit struct)
   |
LL |     Opaque;
   |     ~~~~~~

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0423, E0425.
For more information about an error, try `rustc --explain E0423`.
